docs: consolidate CUCKC overview and collab docs

--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
+<!--
+CUCKC.FUN prototype — Feb 2026
+This is the v0.1 inline prototype. README's React/Vite structure is aspirational.
+Real src/ structure to be created in v0.2.
+-->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
