Meta integration: Solana/meme/AI flavor + Wing-Chair wiring

--- a/index.html
+++ b/index.html
@@ -1,263 +1,22 @@
-<!--
-CUCKC.FUN prototype — Feb 2026
-This is the v0.1 inline prototype. README's React/Vite structure is aspirational.
-Real src/ structure to be created in v0.2.
--->
-
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <title>CUCKC.fun - Chair Dating App 🪑</title>
-  <script crossorigin src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
-  <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script>
-  <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
-  <script src="https://cdn.tailwindcss.com"></script>
-  <style>
-    * { -webkit-tap-highlight-color: transparent; }
-    body { margin: 0; padding: 0; overflow: hidden; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', sans-serif; }
-    .no-select { user-select: none; -webkit-user-select: none; }
-  </style>
-</head>
-<body>
-  <div id="root"></div>
-
-  <script type="text/babel">
-    const { useState, useRef, useEffect } = React;
-
-    // === CHAIR DATA ===
-    const CHAIR_DATA = [
-      {
-        id: 1,
-        name: "Thabo",
-        model: "Riempie Stoep Legend",
-        age: 127,
-        bio: "Four generations of butts. Mine's the softest. Sunday mornings are for tea, koeksisters, and existential chats about the garden. Swipe right if you appreciate slow living and can handle my creaking wisdom.",
-        hobbies: ["Sunrise Watching", "Tea Time", "Storytelling"],
-        location: "Cape Town Stoep",
-        occupation: "Wisdom Keeper",
-        image: "https://images.unsplash.com/photo-1503602642458-232111445657?w=800",
-        tags: ["#SaffaLegend", "#Solid", "#Heritage"],
-        vibe: "Peaceful, Timeless, Grounded"
-      },
-      {
-        id: 2,
-        name: "Haldane",
-        model: "Martin Custom Masterpiece",
-        age: 8,
-        bio: "Bespoke curves, local timber, global clout. I'm the reason design tourists book flights. My maker's in every fancy mag. You can't afford me but you'll dream about me.",
-        hobbies: ["Gallery Openings", "Being Photographed", "Judging Mass Production"],
-        location: "Design District, Cape Town",
-        occupation: "Instagram Model",
-        image: "https://images.unsplash.com/photo-1586023492125-27b2c045efd7?w=800",
-        tags: ["#SaffaLegend", "#Luxury", "#Artisan"],
-        vibe: "Elegant, Expensive, Aspirational"
-      },
-      {
-        id: 3,
-        name: "Ludvig",
-        model: "Thonet No. 14 Classic",
-        age: 167,
-        bio: "I've been in more cafés than you've had flat whites. Bentwood beauty from 1859. Lightweight, stackable, timeless. Swipe right if you appreciate OG design that literally invented mass production furniture.",
-        hobbies: ["Café Culture", "Being Stacked", "Surviving Wars"],
-        location: "Viennese Coffee House (on holiday)",
-        occupation: "Café Philosopher",
-        image: "https://images.unsplash.com/photo-1598300042247-d088f8ab3a91?w=800",
-        tags: ["#VacayForeigner", "#Icon", "#Solid"],
-        vibe: "Refined, Historical, Dependable"
-      },
-      {
-        id: 4,
-        name: "Mies",
-        model: "Barcelona Pavilion Edition",
-        age: 97,
-        bio: "Less is more, baby. Chromium-plated steel, hand-buffed leather. I cost more than your car. Designed for royalty (literally), now sitting in your boss's office reminding you of your place.",
-        hobbies: ["Intimidation", "Modernism", "Being Out Of Reach"],
-        location: "MoMA Permanent Collection",
-        occupation: "Status Symbol",
-        image: "https://images.unsplash.com/photo-1567538096630-e0c55bd6374c?w=800",
-        tags: ["#VacayForeigner", "#Luxury", "#Solid"],
-        vibe: "Cold, Beautiful, Unattainable"
-      },
-      {
-        id: 5,
-        name: "Charles",
-        model: "Eames Lounge Chair",
-        age: 71,
-        bio: "Rosewood, leather, impeccable vibes. I'm the chair your dad wanted, your boss has, and you'll buy when you finally 'make it.' Recline into success. Swipe right if you've earned me.",
-        hobbies: ["Jazz Records", "Sunset Reading", "Being Coveted"],
-        location: "Executive's Den",
-        occupation: "Aspiration Incarnate",
-        image: "https://images.unsplash.com/photo-1540574163026-643ea20ade25?w=800",
-        tags: ["#VacayForeigner", "#Icon", "#Solid"],
-        vibe: "Comfortable, Timeless, Dad Goals"
-      },
-      {
-        id: 6,
-        name: "Sven",
-        model: "IKEA Poäng",
-        age: 48,
-        bio: "Affordable comfort. Flat-pack king. I've survived more moves than your last three relationships. Instructions unclear? Not my problem. Swipe right if you assemble furniture sober.",
-        hobbies: ["Moving Day", "Budget Living", "Springy Sitting"],
-        location: "Every First Apartment",
-        occupation: "Starter Chair",
-        image: "https://images.unsplash.com/photo-1551298370-9d3d53740c72?w=800",
-        tags: ["#VacayForeigner", "#Relatable", "#Solid"],
-        vibe: "Practical, Accessible, Nostalgic"
-      },
-      {
-        id: 7,
-        name: "Ouma",
-        model: "Traditional Kist Chest-Seat",
-        age: 183,
-        bio: "I hold secrets. Three wars, two marriages, one stubborn lock. Solid yellowwood, iron hinges forged by hand. Sit on me if you dare—I've seen things. Swipe right if you respect elders.",
-        hobbies: ["Guarding Heirlooms", "Creaking Ominously", "Family Lore"],
-        location: "Karoo Farmhouse Attic",
-        occupation: "Family Historian",
-        image: "https://images.unsplash.com/photo-1595526114035-0d45ed16cfbf?w=800",
-        tags: ["#SaffaLegend", "#Heritage", "#Mystery"],
-        vibe: "Heavy, Haunted, Historical"
-      },
-      {
-        id: 8,
-        name: "Piet",
-        model: "Outdoor Braai Folding Chair",
-        age: 12,
-        bio: "Canvas seat, rust-proof frame, beer holder attachment. I've witnessed every family braai since 2014. My fabric smells like smoke and stories. Swipe right if you believe in the sacred ritual of outdoor meat cooking.",
-        hobbies: ["Braai Duty", "Sunset Beers", "Dad Jokes"],
-        location: "Every SA Backyard",
-        occupation: "Braai Witness",
-        image: "https://images.unsplash.com/photo-1505691723518-36a5ac3be353?w=800",
-        tags: ["#SaffaLegend", "#Solid", "#Culture"],
-        vibe: "Relaxed, Communal, Nostalgic"
-      },
-      {
-        id: 9,
-        name: "Chadwick",
-        model: "Monobloc Plastic Legend",
-        age: "∞",
-        bio: "The toxic ex who's still everywhere. White, cheap, unbreakable, shows up at every braai, wedding, protest, and bad decision. You ghosted me in 2005 but I'm still on your stoep. No drama, just eternal presence. Deal with it. 🇿🇦🪑",
-        hobbies: ["Surviving Rain", "Stacking Myself", "Gatecrashing Picnics"],
-        location: "Everywhere You've Ever Been",
-        occupation: "Uninvited Guest",
-        image: "https://images.unsplash.com/photo-1503602642458-232111445657?w=800",
-        tags: ["#Immortal", "#EverywhereEx", "#PlasticKing"],
-        vibe: "Unkillable, Ubiquitous, Traumatizing"
-      },
-      {
-        id: 10,
-        name: "DegenRex",
-        model: "RGB Gaming Throne",
-        age: "22 (dog years: 154)",
-        bio: "42069 RGB lights, massage motors, built-in crypto wallet holder. I pump memes, NFTs, and energy drinks. If your portfolio is down, blame the chair—it's mooning anyway. WAGMI or GTFO. 🚀💎🙌",
-        hobbies: ["Rage Quitting", "Diamond Hands", "Late-Night Lambo Dreams"],
-        location: "Discord / Basement / Moon",
-        occupation: "Full-Time Shitposter & Yield Farmer",
-        image: "https://images.unsplash.com/photo-1616627547584-bf28cfeefa2b?w=800",
-        tags: ["#CryptoBro", "#GamerDad", "#MoonOrBust"],
-        vibe: "Overclocked, Loud, Chaotic Good"
-      },
-      {
-        id: 11,
-        name: "Karen von Privilege",
-        model: "Oversized Gold Manager-Summoner Throne",
-        age: "Timeless Entitlement",
-        bio: "I'd like to speak to the designer of existence. This seat is reserved, the cushion is subpar, and your vibe is unacceptable. Do you know who I am? Of course you don't—peasants never do. Now fix it or I'll ask for your supervisor. 💅👑",
-        hobbies: ["Asking For Managers", "Karen-ing In Public", "Entitlement Flexing"],
-        location: "The Front Of Every Line",
-        occupation: "Professional Complaint Escalator",
-        image: "https://images.unsplash.com/photo-1580480055273-228ff5388d90?w=800",
-        tags: ["#KarenCore", "#SpeakToManager", "#EntitledRoyalty"],
-        vibe: "Demanding, Dramatic, Always Right"
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Cuckc-Fun | Dojo Layer 2</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <style>
+      body {
+        background-color: #0f172a;
+        margin: 0;
+        padding: 0;
+        overflow: hidden;
       }
-    ];
-
-    // === APP ===
-    function App() {
-      const [currentIndex, setCurrentIndex] = useState(0);
-      const [matches, setMatches] = useState([]);
-      const [showBio, setShowBio] = useState(false);
-      const [position, setPosition] = useState({ x: 0, y: 0, rot: 0 });
-      const [isDragging, setIsDragging] = useState(false);
-      const [cuckBalance, setCuckBalance] = useState(0);
-      const [reaction, setReaction] = useState(null);
-
-      const dragStart = useRef({ x: 0, y: 0, time: 0 });
-      const audioCtx = useRef(null);
-
-      useEffect(() => {
-        audioCtx.current = new (window.AudioContext || window.webkitAudioContext)();
-      }, []);
-
-      const playSound = (type) => {
-        if (!audioCtx.current) return;
-        const ctx = audioCtx.current;
-        const osc = ctx.createOscillator();
-        const gain = ctx.createGain();
-        osc.connect(gain);
-        gain.connect(ctx.destination);
-
-        if (type === 'whoosh') {
-          osc.frequency.setValueAtTime(300, ctx.currentTime);
-          osc.frequency.exponentialRampToValueAtTime(100, ctx.currentTime + 0.2);
-          gain.gain.setValueAtTime(0.3, ctx.currentTime);
-          gain.gain.exponentialRampToValueAtTime(0.001, ctx.currentTime + 0.3);
-        } else if (type === 'ding') {
-          osc.type = 'sine';
-          osc.frequency.setValueAtTime(800, ctx.currentTime);
-          osc.frequency.setValueAtTime(1000, ctx.currentTime + 0.05);
-          gain.gain.setValueAtTime(0.4, ctx.currentTime);
-          gain.gain.exponentialRampToValueAtTime(0.001, ctx.currentTime + 0.4);
-        }
-
-        osc.start();
-        osc.stop(ctx.currentTime + 0.4);
-      };
-
-      const handleSwipe = (direction) => {
-        const chair = CHAIR_DATA[currentIndex];
-        let delta = 0;
-        let reactionType = null;
-
-        if (direction > 0) {
-          // Match
-          setMatches(prev => [...prev, chair]);
-          confetti({ particleCount: 120, spread: 90, origin: { y: 0.6 } });
-          playSound('ding');
-          delta = chair.tags?.includes('#SaffaLegend') ? 10 : 1;
-          reactionType = chair.tags?.includes('#SaffaLegend') ? 'legend' : 'match';
-        } else {
-          // Reject
-          if (chair.id === 11) {
-            delta = 0; // Karen free pass
-            reactionType = 'karen';
-          } else if (chair.id === 9) {
-            delta = -100; // Monobloc tax
-            reactionType = 'immortal';
-          } else if (chair.tags?.includes('#SaffaLegend')) {
-            delta = -2;
-          }
-        }
-
-        setCuckBalance(prev => Math.max(0, prev + delta));
-        setReaction(reactionType);
-        setTimeout(() => setReaction(null), 800);
-        setTimeout(() => {
-          setCurrentIndex(prev => prev + 1);
-          setPosition({ x: 0, y: 0, rot: 0 });
-        }, 300);
-      };
-
-      const handleMouseDown = (e) => {
-        const clientX = e.touches ? e.touches[0].clientX : e.clientX;
-        const clientY = e.touches ? e.touches[0].clientY : e.clientY;
-        dragStart.current = { x: clientX, y: clientY, time: Date.now() };
-        setIsDragging(true);
-        playSound('whoosh');
-      };
-
-      const handleMouseMove = (e) => {
-        if (!isDragging) return;
-        const clientX = e.touches ? e.touches[0].clientX : e.clientX;
+    </style>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
+  </body>
+</html>
